--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ li > p, .fixedLogo > p {
 
 .addContainer {
     border: 1px solid black;
-    margin: 40px;
+    margin: 40px 50px 40px 50px;
     border-radius: 8px;
     padding: 40px;
 
@@ -144,6 +144,8 @@ form > div {
 
     justify-content: center;
     align-items: center;
+
+    position: relative;
     
 }
 
@@ -158,5 +160,18 @@ form > div {
     width: 120px;
 }
 
+.read::before {
+    position: absolute;
+    font-family: var(--contentFont);
+    color: red;
+    content: 'Read';
+    font-size: 12px;
+    font-weight: bold;
+    top:0px;
+    right:0px;
+
+    text-shadow: 0px 1px 1px red;
+    transform: rotate(23deg);
+}
 
 
