--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,23 @@
     --bgColor: #f1f5f9;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    background-image: linear-gradient(#e2e8f0, #f1f5f9, 
+    #f8fafc, var(--bgColor));
 }
 
 html, body {
     margin: 0;
     background-color: var(--bgColor);
+    
     display:flex;
     flex-grow: 1;
 
@@ -22,6 +32,7 @@ html, body {
 }
 
 .fixedContainer {
+    z-index: 9999;
     font-family: var(--uiFont);
     display:flex;
     justify-content: space-between;
@@ -33,6 +44,7 @@ html, body {
 
     position: fixed;
     width:100%;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
 }
 .fixedContainer > a {
     display:flex;
@@ -94,12 +106,14 @@ li > p, .fixedLogo > p {
     border: 1px solid black;
     border-radius: 8px;
     margin: 40px 50px 50px 50px;
-
+    flex:1;
     display:grid;
     gap: 8px;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    /*grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));*/
+    grid-template-columns: repeat(auto-fill, clamp(160px, 10%, 200px));
     grid-template-rows: 1fr 1fr;
     
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
     padding: 40px;
     background-color: transparent;
@@ -108,10 +122,11 @@ li > p, .fixedLogo > p {
 
 .addContainer {
     border: 1px solid black;
-    margin: 40px 50px 40px 50px;
+    margin: 40px 50px 50px 50px;
     border-radius: 8px;
     padding: 40px;
 
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     
 }
 
@@ -128,7 +143,6 @@ form > div {
 
 .contentContainer {
     display:flex;
-    flex-direction: column;
     margin-top: 40px;
     width: 100%;
     
@@ -137,7 +151,7 @@ form > div {
 .card {
     padding: 10px;
     margin: 0;
-    border: 1px solid black;
+    border: 1.5px solid black;
     display:flex;
     flex-direction: column;
     width:160px;
@@ -146,18 +160,41 @@ form > div {
     align-items: center;
 
     position: relative;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     
 }
 
-.card > p {
+.bookTitle {
     font-family: var(--contentFont);
-    font-size: 10px;
+    font-size: 14px;
     font-weight: bold;
+    height:30px;
+    text-align: center;
 }
 
 .cardCover {
     height:160px;
     width: 120px;
+}
+
+.card > label {
+    font-family: var(--contentFont);
+    display:flex;
+    font-size: 12px;
+    justify-content: center;
+    align-items: center;
+}
+
+.card > button {
+    font-size: 12px;
+    font-family: var(--uiFont);
+}
+
+.pagesTxt {
+    font-family: var(--contentFont);
+    font-size: 12px;
+    font-weight: normal;
+    margin: 0;
 }
 
 .read::before {
